feat: Create REST API for editHistories
