# src/index.ts
@@ -5,6 +5,7 @@ import swaggerConfig from './../swagger.json';
 import config from './utils/config';
 import usersRouter from './controllers/users';
 import editorContentsRouter from './controllers/editorContents';
+import editHistoriesRouter from './controllers/editHistories';
 import moment from './controllers/moment';
 
 const app: Application = express();
@@ -16,6 +17,7 @@ app.use(bodyParser.urlencoded({ extended: true }));
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerConfig));
 app.use('/api/users', usersRouter);
 app.use('/api/editorContents', editorContentsRouter);
+app.use('/api/editHistories', editHistoriesRouter);
 app.use('/api/moment', moment);
 
 app.get('/', (req: Request, res: Response) => {
